src/parser/snapshots/hebi4__parser__tests__arithmetic.snap
---
source: src/parser/tests.rs
expression: parse(&tokens).unwrap()
---
Root(
    [
        StmtExpr(
            Infix(
                Add,
                Int(
                    1,
                ),
                Int(
                    1,
                ),
            ),
        ),
        StmtExpr(
            Infix(
                Mul,
                Int(
                    3,
                ),
                Int(
                    4,
                ),
            ),
        ),
        StmtExpr(
            Infix(
                Sub,
                Infix(
                    Add,
                    Int(
                        1,
                    ),
                    Infix(
                        Mul,
                        Infix(
                            Div,
                            Int(
                                7,
                            ),
                            Int(
                                2,
                            ),
                        ),
                        Int(
                            3,
                        ),
                    ),
                ),
                Int(
                    1,
                ),
            ),
        ),
    ],
)
