src/parser/snapshots/hebi4__parser__tests__array.snap
---
source: src/parser/tests.rs
expression: snapshot
---
OK
Root(
    [
        Var(
            Ident(
                "empty",
            ),
            Array(
                [],
            ),
        ),
        Var(
            Ident(
                "single",
            ),
            Array(
                [
                    Int(
                        0,
                    ),
                ],
            ),
        ),
        Var(
            Ident(
                "single_tc",
            ),
            Array(
                [
                    Int(
                        0,
                    ),
                ],
            ),
        ),
        Var(
            Ident(
                "multi",
            ),
            Array(
                [
                    Int(
                        0,
                    ),
                    Int(
                        1,
                    ),
                    Int(
                        2,
                    ),
                ],
            ),
        ),
        Var(
            Ident(
                "multi_tc",
            ),
            Array(
                [
                    Int(
                        0,
                    ),
                    Int(
                        1,
                    ),
                    Int(
                        2,
                    ),
                ],
            ),
        ),
    ],
)
