src/parser/snapshots/hebi4__parser__tests__assign.snap
---
source: src/parser/tests.rs
expression: snapshot
---
OK
Root(
    [
        StmtExpr(
            SetVar(
                None,
                GetVar(
                    Ident(
                        "x",
                    ),
                ),
                Int(
                    0,
                ),
            ),
        ),
        StmtExpr(
            SetField(
                None,
                GetField(
                    GetVar(
                        Ident(
                            "x",
                        ),
                    ),
                    Ident(
                        "a",
                    ),
                ),
                Int(
                    0,
                ),
            ),
        ),
        StmtExpr(
            SetIndex(
                None,
                GetIndex(
                    GetVar(
                        Ident(
                            "x",
                        ),
                    ),
                    Int(
                        0,
                    ),
                ),
                Int(
                    0,
                ),
            ),
        ),
        StmtExpr(
            SetIndex(
                None,
                GetIndex(
                    GetField(
                        GetVar(
                            Ident(
                                "x",
                            ),
                        ),
                        Ident(
                            "a",
                        ),
                    ),
                    Int(
                        0,
                    ),
                ),
                Int(
                    0,
                ),
            ),
        ),
        StmtExpr(
            SetField(
                None,
                GetField(
                    GetIndex(
                        GetVar(
                            Ident(
                                "x",
                            ),
                        ),
                        Int(
                            0,
                        ),
                    ),
                    Ident(
                        "a",
                    ),
                ),
                Int(
                    0,
                ),
            ),
        ),
        StmtExpr(
            SetIndex(
                None,
                GetIndex(
                    GetIndex(
                        GetIndex(
                            GetField(
                                GetField(
                                    GetField(
                                        GetVar(
                                            Ident(
                                                "x",
                                            ),
                                        ),
                                        Ident(
                                            "a",
                                        ),
                                    ),
                                    Ident(
                                        "b",
                                    ),
                                ),
                                Ident(
                                    "c",
                                ),
                            ),
                            Int(
                                0,
                            ),
                        ),
                        Int(
                            1,
                        ),
                    ),
                    Int(
                        2,
                    ),
                ),
                Int(
                    0,
                ),
            ),
        ),
        StmtExpr(
            SetVar(
                Add,
                GetVar(
                    Ident(
                        "x",
                    ),
                ),
                Int(
                    1,
                ),
            ),
        ),
        StmtExpr(
            SetVar(
                Sub,
                GetVar(
                    Ident(
                        "x",
                    ),
                ),
                Int(
                    1,
                ),
            ),
        ),
        StmtExpr(
            SetVar(
                Mul,
                GetVar(
                    Ident(
                        "x",
                    ),
                ),
                Int(
                    1,
                ),
            ),
        ),
        StmtExpr(
            SetVar(
                Div,
                GetVar(
                    Ident(
                        "x",
                    ),
                ),
                Int(
                    1,
                ),
            ),
        ),
    ],
)
