src/parser/snapshots/hebi4__parser__tests__binary_search.snap
---
source: src/parser/tests.rs
expression: snapshot
---
OK
Root(
    [
        FuncDecl(
            Ident(
                "binary_search",
            ),
            Block(
                [
                    Var(
                        Ident(
                            "low",
                        ),
                        Int(
                            0,
                        ),
                    ),
                    Var(
                        Ident(
                            "high",
                        ),
                        Infix(
                            Sub,
                            Call(
                                GetVar(
                                    Ident(
                                        "len",
                                    ),
                                ),
                                [
                                    GetVar(
                                        Ident(
                                            "arr",
                                        ),
                                    ),
                                ],
                            ),
                            Int(
                                1,
                            ),
                        ),
                    ),
                    Loop(
                        [
                            StmtExpr(
                                IfSimple(
                                    Infix(
                                        Gt,
                                        GetVar(
                                            Ident(
                                                "low",
                                            ),
                                        ),
                                        GetVar(
                                            Ident(
                                                "high",
                                            ),
                                        ),
                                    ),
                                    None,
                                    [
                                        StmtExpr(
                                            Break,
                                        ),
                                    ],
                                ),
                            ),
                            Var(
                                Ident(
                                    "mid",
                                ),
                                Infix(
                                    Div,
                                    Infix(
                                        Add,
                                        GetVar(
                                            Ident(
                                                "low",
                                            ),
                                        ),
                                        GetVar(
                                            Ident(
                                                "high",
                                            ),
                                        ),
                                    ),
                                    Int(
                                        2,
                                    ),
                                ),
                            ),
                            Var(
                                Ident(
                                    "v",
                                ),
                                GetIndex(
                                    GetVar(
                                        Ident(
                                            "arr",
                                        ),
                                    ),
                                    GetVar(
                                        Ident(
                                            "mid",
                                        ),
                                    ),
                                ),
                            ),
                            StmtExpr(
                                IfSimple(
                                    Infix(
                                        Eq,
                                        GetVar(
                                            Ident(
                                                "v",
                                            ),
                                        ),
                                        GetVar(
                                            Ident(
                                                "target",
                                            ),
                                        ),
                                    ),
                                    None,
                                    [
                                        StmtExpr(
                                            Return(
                                                Some(
                                                    GetVar(
                                                        Ident(
                                                            "mid",
                                                        ),
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ],
                                ),
                            ),
                            StmtExpr(
                                IfSimple(
                                    Infix(
                                        Lt,
                                        GetVar(
                                            Ident(
                                                "v",
                                            ),
                                        ),
                                        GetVar(
                                            Ident(
                                                "target",
                                            ),
                                        ),
                                    ),
                                    Some(
                                        Block(
                                            [
                                                StmtExpr(
                                                    SetVar(
                                                        None,
                                                        GetVar(
                                                            Ident(
                                                                "high",
                                                            ),
                                                        ),
                                                        Infix(
                                                            Sub,
                                                            GetVar(
                                                                Ident(
                                                                    "mid",
                                                                ),
                                                            ),
                                                            Int(
                                                                1,
                                                            ),
                                                        ),
                                                    ),
                                                ),
                                            ],
                                        ),
                                    ),
                                    [
                                        StmtExpr(
                                            SetVar(
                                                None,
                                                GetVar(
                                                    Ident(
                                                        "low",
                                                    ),
                                                ),
                                                Infix(
                                                    Add,
                                                    GetVar(
                                                        Ident(
                                                            "mid",
                                                        ),
                                                    ),
                                                    Int(
                                                        1,
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ],
                                ),
                            ),
                        ],
                    ),
                    StmtExpr(
                        Return(
                            None,
                        ),
                    ),
                    StmtExpr(
                        Prefix(
                            Minus,
                            Int(
                                1,
                            ),
                        ),
                    ),
                ],
            ),
            [
                Ident(
                    "arr",
                ),
                Ident(
                    "target",
                ),
            ],
        ),
    ],
)
