src/parser/snapshots/hebi4__parser__tests__break_expr.snap
---
source: src/parser/tests.rs
expression: snapshot
---
OK
Root(
    [
        Loop(
            [
                StmtExpr(
                    Break,
                ),
            ],
        ),
    ],
)
