src/parser/snapshots/hebi4__parser__tests__break_outside_loop_expr.snap
---
source: src/parser/tests.rs
expression: snapshot
---
ERROR
`break` outside of a loop
1 |  break
  |  ^^^^^
