src/parser/snapshots/hebi4__parser__tests__call_object.snap
---
source: src/parser/tests.rs
expression: snapshot
---
OK
Root(
    [
        StmtExpr(
            CallObject(
                GetVar(
                    Ident(
                        "empty",
                    ),
                ),
                [],
            ),
        ),
        StmtExpr(
            CallObject(
                GetVar(
                    Ident(
                        "single_arg",
                    ),
                ),
                [
                    ObjectEntry(
                        Str(
                            "a",
                        ),
                        GetVar(
                            Ident(
                                "b",
                            ),
                        ),
                    ),
                ],
            ),
        ),
        StmtExpr(
            CallObject(
                GetVar(
                    Ident(
                        "single_arg_tc",
                    ),
                ),
                [
                    ObjectEntry(
                        Str(
                            "a",
                        ),
                        GetVar(
                            Ident(
                                "b",
                            ),
                        ),
                    ),
                ],
            ),
        ),
        StmtExpr(
            CallObject(
                GetVar(
                    Ident(
                        "multi_arg",
                    ),
                ),
                [
                    ObjectEntry(
                        Str(
                            "a",
                        ),
                        Int32(
                            0,
                        ),
                    ),
                    ObjectEntry(
                        Str(
                            "b",
                        ),
                        Int32(
                            1,
                        ),
                    ),
                ],
            ),
        ),
        StmtExpr(
            CallObject(
                GetVar(
                    Ident(
                        "multi_arg_tc",
                    ),
                ),
                [
                    ObjectEntry(
                        Str(
                            "a",
                        ),
                        Int32(
                            0,
                        ),
                    ),
                    ObjectEntry(
                        Str(
                            "b",
                        ),
                        Int32(
                            1,
                        ),
                    ),
                ],
            ),
        ),
        StmtExpr(
            CallObject(
                GetVar(
                    Ident(
                        "single_arg_inline",
                    ),
                ),
                [
                    ObjectEntry(
                        Str(
                            "a",
                        ),
                        GetVar(
                            Ident(
                                "a",
                            ),
                        ),
                    ),
                ],
            ),
        ),
        StmtExpr(
            CallObject(
                GetVar(
                    Ident(
                        "single_arg_inline_tc",
                    ),
                ),
                [
                    ObjectEntry(
                        Str(
                            "a",
                        ),
                        GetVar(
                            Ident(
                                "a",
                            ),
                        ),
                    ),
                ],
            ),
        ),
        StmtExpr(
            CallObject(
                GetVar(
                    Ident(
                        "multi_arg_mixed",
                    ),
                ),
                [
                    ObjectEntry(
                        Str(
                            "a",
                        ),
                        Int32(
                            0,
                        ),
                    ),
                    ObjectEntry(
                        Str(
                            "b",
                        ),
                        GetVar(
                            Ident(
                                "b",
                            ),
                        ),
                    ),
                ],
            ),
        ),
        StmtExpr(
            CallObject(
                GetVar(
                    Ident(
                        "multi_arg_mixed_tc",
                    ),
                ),
                [
                    ObjectEntry(
                        Str(
                            "a",
                        ),
                        Int32(
                            0,
                        ),
                    ),
                    ObjectEntry(
                        Str(
                            "b",
                        ),
                        GetVar(
                            Ident(
                                "b",
                            ),
                        ),
                    ),
                ],
            ),
        ),
        StmtExpr(
            CallObject(
                GetVar(
                    Ident(
                        "multi_arg_mixed2",
                    ),
                ),
                [
                    ObjectEntry(
                        Str(
                            "a",
                        ),
                        GetVar(
                            Ident(
                                "a",
                            ),
                        ),
                    ),
                    ObjectEntry(
                        Str(
                            "b",
                        ),
                        Int32(
                            0,
                        ),
                    ),
                ],
            ),
        ),
        StmtExpr(
            CallObject(
                GetVar(
                    Ident(
                        "multi_arg_mixed2_tc",
                    ),
                ),
                [
                    ObjectEntry(
                        Str(
                            "a",
                        ),
                        GetVar(
                            Ident(
                                "a",
                            ),
                        ),
                    ),
                    ObjectEntry(
                        Str(
                            "b",
                        ),
                        Int32(
                            0,
                        ),
                    ),
                ],
            ),
        ),
        StmtExpr(
            CallObject(
                GetVar(
                    Ident(
                        "string_key",
                    ),
                ),
                [
                    ObjectEntry(
                        Str(
                            "a",
                        ),
                        Int32(
                            0,
                        ),
                    ),
                ],
            ),
        ),
        StmtExpr(
            CallObject(
                GetVar(
                    Ident(
                        "string_key_tc",
                    ),
                ),
                [
                    ObjectEntry(
                        Str(
                            "a",
                        ),
                        Int32(
                            0,
                        ),
                    ),
                ],
            ),
        ),
        StmtExpr(
            CallObject(
                GetVar(
                    Ident(
                        "string_key_multi",
                    ),
                ),
                [
                    ObjectEntry(
                        Str(
                            "a",
                        ),
                        Int32(
                            0,
                        ),
                    ),
                    ObjectEntry(
                        Str(
                            "b",
                        ),
                        Int32(
                            1,
                        ),
                    ),
                ],
            ),
        ),
        StmtExpr(
            CallObject(
                GetVar(
                    Ident(
                        "string_key_multi_tc",
                    ),
                ),
                [
                    ObjectEntry(
                        Str(
                            "a",
                        ),
                        Int32(
                            0,
                        ),
                    ),
                    ObjectEntry(
                        Str(
                            "b",
                        ),
                        Int32(
                            1,
                        ),
                    ),
                ],
            ),
        ),
    ],
)
