src/parser/snapshots/hebi4__parser__tests__calls.snap
---
source: src/parser/tests.rs
expression: snapshot
---
OK
Root(
    [
        StmtExpr(
            Call(
                GetVar(
                    Ident(
                        "test",
                    ),
                ),
                [],
            ),
        ),
        StmtExpr(
            Call(
                GetVar(
                    Ident(
                        "test",
                    ),
                ),
                [
                    Int32(
                        1,
                    ),
                ],
            ),
        ),
        StmtExpr(
            Call(
                GetVar(
                    Ident(
                        "test",
                    ),
                ),
                [
                    Int32(
                        1,
                    ),
                    Int32(
                        2,
                    ),
                    Int32(
                        3,
                    ),
                ],
            ),
        ),
        StmtExpr(
            Call(
                GetVar(
                    Ident(
                        "test",
                    ),
                ),
                [
                    Int32(
                        1,
                    ),
                    Int32(
                        2,
                    ),
                    Int32(
                        3,
                    ),
                ],
            ),
        ),
    ],
)
