src/parser/snapshots/hebi4__parser__tests__cmp.snap
---
source: src/parser/tests.rs
expression: snapshot
---
OK
Root(
    [
        StmtExpr(
            Infix(
                Lt,
                Int(
                    0,
                ),
                Int(
                    1,
                ),
            ),
        ),
        StmtExpr(
            Infix(
                Gt,
                Int(
                    1,
                ),
                Int(
                    0,
                ),
            ),
        ),
        StmtExpr(
            Infix(
                Ge,
                Int(
                    1,
                ),
                Int(
                    0,
                ),
            ),
        ),
        StmtExpr(
            Infix(
                Le,
                Int(
                    0,
                ),
                Int(
                    1,
                ),
            ),
        ),
        StmtExpr(
            Infix(
                Eq,
                Int(
                    1,
                ),
                Int(
                    1,
                ),
            ),
        ),
        StmtExpr(
            Infix(
                Ne,
                Int(
                    0,
                ),
                Int(
                    1,
                ),
            ),
        ),
    ],
)
