src/parser/snapshots/hebi4__parser__tests__continue_outside_loop_expr.snap
---
source: src/parser/tests.rs
expression: snapshot
---
ERROR
`continue` outside of a loop
1 |  continue
  |  ^^^^^^^^
